--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(aod)
 
 ## Find catkin and any catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs sorter_msgs image_proc sensor_msgs dynamic_reconfigure)
+find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs sorter_msgs image_proc sensor_msgs dynamic_reconfigure cv_bridge)
 
 ## Generate dynamic reconfigure
 generate_dynamic_reconfigure_options(
@@ -28,6 +28,7 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_executable(color_calib src/rod_camera_rgb_color_calib.cpp)
 add_dependencies(color_calib color_calib_generate_messages_cpp ${PROJECT_NAME}_gencfg)
 target_link_libraries(color_calib ${catkin_LIBRARIES})
+add_library(ColorCalibrationDll src/color_calibration/ColorCalibrationDll.cpp)
 
 
 ## Rod analysis
