--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,7 @@
   <run_depend>sorter_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <build_depend>cv_bridge</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
