--- a/cfg/cod.cfg
+++ b/cfg/cod.cfg
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 #       Name               Type      lvl  Description                         Default    Min   Max
 gen.add("parameter",         double_t, 0,   "An Integer parameter",             0.001,     0,    1)
 
-exit(gen.generate(PACKAGE, "aod", "Cod"))
+exit(gen.generate(PACKAGE, "aod", "cod"))
