--- a/cfg/image_aggregation.cfg
+++ b/cfg/image_aggregation.cfg
@@ -6,6 +6,6 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 #       Name               Type      lvl  Description                         Default    Min   Max
-gen.add("parameter",         double_t, 0,   "An Integer parameter",             0.001,     0,    1)
+gen.add("rate",         double_t, 0,   "Number of frames capture per second",             4.0,     0.5,    20)
 
-exit(gen.generate(PACKAGE, "aod", "ImageAggregation"))
+exit(gen.generate(PACKAGE, "aod", "image_aggregation"))
