--- a/cfg/color_calib.cfg
+++ b/cfg/color_calib.cfg
@@ -12,4 +12,4 @@ gen.add("calib_corr_B", double_t, 0, "Parametr kalibracyjny skladowej B", 1.0,  
 gen.add("auto_calib",	bool_t,   0, "Czy automatycznie kalibrujemy",    False)
 gen.add("calib_correction",double_t, 0, "Parametr korekcyjny kalibracji ",0.5,	 0.01, 10.00)
 
-exit(gen.generate(PACKAGE, "aod", "ColorCalib"))
+exit(gen.generate(PACKAGE, "aod", "color_calib"))
