--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
+  <build_depend>polled_camera</build_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>sorter_msgs</run_depend>
   <run_depend>roscpp</run_depend>
